add: routes
1. store new chatserver
2. find chatroom server
3. get my info

and some fixs
